# rust-microservices-virtualshop

./: .env  .gitignore  Cargo.toml  Dockerfile  readme.md
k8s/product-actix-api/: product-actix-api-config.yaml  product-actix-api-deployment.yaml  product-actix-api-secret.yaml  product-actix-api-service.yaml
k8s/product-mysql-db/: product-mysql-db-secret.yaml  product-mysql-db-service.yaml  product-mysql-db-statefusetl.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20260118_112109_create_product_schema.rs
src/: main.rs  route_config.rs
src/application/: mod.rs
src/application/dtos/products/: create_product_dto.rs  mod.rs  product_dto.rs  update_product_dto.rs
src/application/services/: mod.rs  product_services.rs
src/entity/: categories.rs  mod.rs  prelude.rs  products.rs
src/handlers/: product.rs
src/repositories/: product_repository.rs
src/services/: product_services.rs
