[package]
name = "rust-microservices"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "2.0.0-rc.28", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
log = "0.4.29"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }